--- a/flex.css
+++ b/flex.css
@@ -1,14 +1,35 @@
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-    a {
-        text-decoration: none;
-      }
+
+    header marquee img{
+        z-index: -1;
+    }
+    
+    *{
+        font-family: 'Kanit' regular;
+        box-sizing: border-box;
+    }
+    
+    
+
       
       nav {
-        font-family: monospace;
+        display: flex;
+        justify-content: space-around;
+        background-color: rgb(67, 67, 67);
+        padding: 2px;
+        width: 100%;
+        height: 40px;
+        position:fixed;
+        top: 0;
+        z-index: 100;
+        text-align: center;        
       }
       
       ul {
-        background: darkorange;
+        /* background: darkorange; */
+        display: flex;
+        justify-content: space-around;
         list-style: none;
         margin: 0;
         padding-left: 0;
@@ -16,7 +37,7 @@
       
       li {
         color: #fff;
-        background: darkorange;
+        /* background: darkorange; */
         display: block;
         float: left;
         padding: 1rem;
