--- a/flex.css
+++ b/flex.css
@@ -11,7 +11,10 @@
     }
     
     
-
+    .test{
+      display: flex;
+      justify-self: flex-end;
+    }
       
       nav {
         display: flex;
@@ -19,7 +22,7 @@
         background-color: rgb(67, 67, 67);
         padding: 2px;
         width: 100%;
-        height: 40px;
+        height: 10%;
         position:fixed;
         top: 0;
         z-index: 100;
@@ -71,6 +74,12 @@
         left: 0;
         display: none;
       }
+
+      header nav ul li a{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
       
       ul li:hover > ul,
       ul li:focus-within > ul,
@@ -85,4 +94,9 @@
         clear: both;
         width: 100%;
       }
+
+
+
+
+
 
