--- a/flex.css
+++ b/flex.css
@@ -4,6 +4,10 @@
     header marquee img{
         z-index: -1;
     }
+
+    :root{
+      background-image: linear-gradient(gray, black, gray);
+    }
     
     *{
         font-family: 'Kanit' regular;
@@ -11,15 +15,15 @@
     }
     
     
-    .test{
-      display: flex;
-      justify-self: flex-end;
-    }
+   
       
       nav {
         display: flex;
+        flex-direction: row;
         justify-content: space-around;
-        background-color: rgb(67, 67, 67);
+        align-self: flex-start; 
+        justify-content: space-around;
+        background-color: black;
         padding: 2px;
         width: 100%;
         height: 10%;
@@ -32,30 +36,41 @@
       ul {
         /* background: darkorange; */
         display: flex;
-        justify-content: space-around;
+        align-self: center;
         list-style: none;
         margin: 0;
         padding-left: 0;
       }
+
+      .home_button {
+        /* background: darkorange; */
+        display: flex;
+        justify-self: center;
+      }
+
+      .hamburger {
+        /* background: darkorange; */
+        display: flex;
+        justify-self: flex-end;
+        list-style: none;
+      }
+
       
       li {
         color: #fff;
         /* background: darkorange; */
-        display: block;
-        float: left;
         padding: 1rem;
         position: relative;
-        text-decoration: none;
         transition-duration: 0.5s;
       }
         
       li a {
-        color: #fff;
+        color: black;
       }
       
       li:hover,
       li:focus-within {
-        background: red;
+        background: rgb(182, 182, 182);
         cursor: pointer;
       }
       
@@ -64,22 +79,23 @@
       }
       
       ul li ul {
-        background: orange;
+        display:flex;
+        background-color: grey;
         visibility: hidden;
         opacity: 0;
-        min-width: 5rem;
+        min-width: 0.2rem;
         position: absolute;
-        transition: all 0.5s ease;
+        transition: all 0.2s ease;
         margin-top: 1rem;
         left: 0;
         display: none;
       }
 
-      header nav ul li a{
+      /* header nav ul li a{
         display: flex;
         justify-content: center;
         align-items: center;
-      }
+      } */
       
       ul li:hover > ul,
       ul li:focus-within > ul,
@@ -91,10 +107,62 @@
       }
       
       ul li ul li {
+        display:flex;
+        justify-content: center;
+        justify-self: center;
+        background-color: white;
+        padding:1.5rem;
+        border-color: black;
+        border-style: solid;
+        border-radius: 1rem;
         clear: both;
-        width: 100%;
+        width: 80%;
       }
 
+      footer {
+        display: flex;
+        justify-self: center;
+        justify-content: center;
+        color:#fff;        
+        width:100%;
+        background-image:   linear-gradient(to right, gray, black, gray, black, grey);
+      }
+
+        
+
+      
+
+/* Smartphones */
+@media only screen and (max-width: 480px){
+  .whole{
+      width:fit-content;
+  }
+  .half{
+      width:fit-content;
+  }
+  .third{
+      width:fit-content;
+  }
+  .quarter{
+      width:fit-content;
+  }
+}
+
+/* Tablets */
+@media only screen and (max-width: 1024px){
+  .whole{
+      width: fit-content;
+  }
+  .half{
+      width: fit-content;
+  }
+  .third{
+      width: fit-content;
+  }
+  .quarter{
+      width: fit-content;
+  }
+}
 
 
 
