--- a/flex.css
+++ b/flex.css
@@ -7,10 +7,10 @@
 
     :root{
       background-image: linear-gradient(gray, black, gray);
+      font-family: 'Kanit';
     }
     
     *{
-        font-family: 'Kanit' regular;
         box-sizing: border-box;
     }
     
@@ -20,11 +20,8 @@
       nav {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        align-self: flex-start; 
-        justify-content: space-around;
+        justify-content: center;
         background-color: black;
-        padding: 2px;
         width: 100%;
         height: 10%;
         position:fixed;
@@ -44,13 +41,11 @@
 
       .home_button {
         /* background: darkorange; */
-        display: flex;
         justify-self: center;
       }
 
       .hamburger {
         /* background: darkorange; */
-        display: flex;
         justify-self: flex-end;
         list-style: none;
       }
@@ -121,11 +116,72 @@
 
       footer {
         display: flex;
-        justify-self: center;
-        justify-content: center;
+        flex-direction: row;
+        /* justify-self: center; */
+        justify-content: space-around;
+        align-content: space-around;
+        text-align: center;
+        border-bottom: 0.3rem solid grey;
         color:#fff;        
         width:100%;
-        background-image:   linear-gradient(to right, gray, black, gray, black, grey);
+        background-image: linear-gradient(to right, gray, black, gray, black, grey);
+      }
+
+      .footer-title{
+        display:flex;
+        align-self: center;
+        font-weight: 600;
+        font-size: 64px;
+
+        color: lightgrey;
+      }
+
+      .footer_content{
+        display: flex;
+        text-align: left;
+        flex-direction: column;
+        align-self: center;
+      }
+
+      .phone_icon{
+        display:flex;
+        align-self: flex-start;
+      }
+
+      .footer_buttons{
+        display: flex;
+        flex-direction: column;
+      }
+
+      .footer_buttons a{
+        text-decoration: none;
+        font-size: xx-large;
+        color: white;
+      }
+
+      .footer_buttons a:hover{
+        background: grey;
+        border-radius: 1rem;
+        transition: all 0.5s ease;
+      }
+
+      .footer_extra{
+        width:100%;
+        background-image: linear-gradient(to right, gray, black, gray, black, grey);
+      }
+
+      .footer_extra p {
+        color: white;
+        font-weight: 600;
+        display:flex;
+        justify-content:center;
+      }
+
+      .scroll-container {
+        background-color: #333;
+        overflow: auto;
+        white-space: nowrap;
+        padding: 10px;
       }
 
         
