--- a/flex.css
+++ b/flex.css
@@ -20,7 +20,7 @@
       nav {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-between;
         background-color: black;
         width: 100%;
         height: 10%;
