--- a/flex.css
+++ b/flex.css
@@ -187,6 +187,7 @@
       .content_box{
         display: flex;
         background-image: linear-gradient(to right, gray, black, gray, black, grey);
+        color:white;
       }
 
       
