--- a/flex.css
+++ b/flex.css
@@ -185,13 +185,12 @@
       }
 
       .content_box{
-        display: flex;
-        flex-shrink:1;
-        background-image: linear-gradient(to right, gray, black, gray, black, grey);
         color:white;
         border: solid 1px white;
-        padding-right: 80rem;
-        font-size: x-large;
+        padding: 20rem;
+        font-size: xx-large;
+        padding-right: 10rem;
+        background-image: linear-gradient(black, gray, black);
       }
 
       
