--- a/flex.css
+++ b/flex.css
@@ -177,11 +177,11 @@
         justify-content:center;
       }
 
-      .scroll-container {
-        background-color: #333;
-        overflow: auto;
-        white-space: nowrap;
-        padding: 10px;
+      .slideshow-container {
+          background-color: #333;
+          overflow: auto;
+          white-space: nowrap;
+          padding: 10px;
       }
 
       .content_box{
