--- a/flex.css
+++ b/flex.css
@@ -178,19 +178,53 @@
       }
 
       .slideshow-container {
-          background-color: #333;
-          overflow: auto;
-          white-space: nowrap;
-          padding: 10px;
+        max-width: 1000px;
+        position: relative;
+        margin: auto;
+      }
+
+      .mySlides {
+        display: none;
+      }
+
+      .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        margin-top: -22px;
+        padding: 16px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+      }
+
+      .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+      }
+
+      .prev:hover, .next:hover {
+        background-color: rgba(0,0,0,0.8);
+      }
+      
+      .dot {
+        cursor: pointer;
       }
 
       .content_box{
+        display: flex;
+        background-image: linear-gradient(to right, gray, black, gray, black, grey);
         color:white;
         border: solid 1px white;
         padding: 20rem;
         font-size: xx-large;
         padding-right: 10rem;
         background-image: linear-gradient(black, gray, black);
+      
       }
 
       
