--- a/flex.css
+++ b/flex.css
@@ -226,6 +226,16 @@
         background-color: #717171;
       }
 
+      .fade {
+        animation-name: fade;
+        animation-duration: 1.5s;
+      }
+      
+      @keyframes fade {
+        from {opacity: .4}
+        to {opacity: 1}
+      }
+
       .content_box{
         display: flex;
         background-image: linear-gradient(to right, gray, black, gray, black, grey);
