--- a/flex.css
+++ b/flex.css
@@ -219,7 +219,7 @@
         background-color: #bbb;
         border-radius: 50%;
         display: inline-block;
-        transition: background-color 0.6s ease;
+        transition: 0.6s ease;
       }
 
       .active, .dot:hover {
