--- a/flex.css
+++ b/flex.css
@@ -178,7 +178,7 @@
       }
 
       .slideshow-container {
-        max-width: 1000px;
+        max-width: 100%;
         position: relative;
         margin: auto;
       }
