--- a/flex.css
+++ b/flex.css
@@ -188,6 +188,7 @@
       }
 
       .prev, .next {
+        z-index: 100;
         cursor: pointer;
         position: absolute;
         top: 50%;
@@ -203,11 +204,13 @@
       }
 
       .next {
+        z-index: 100;
         right: 0;
         border-radius: 3px 0 0 3px;
       }
 
       .prev:hover, .next:hover {
+        z-index: 100;
         background-color: rgba(0,0,0,0.8);
       }
       
@@ -236,9 +239,7 @@
         to {opacity: 1}
       }
 
-      img {
-        vertical-align: middle;
-      }
+
 
       .content_box{
         display: flex;
