--- a/flex.css
+++ b/flex.css
@@ -12,6 +12,10 @@
     *{
         box-sizing: border-box;
     }
+
+    .background_for_config{
+      background-color: white;
+    }
     
     
     /* HERO IMAGE */
@@ -256,14 +260,79 @@
         to {opacity: 1}
       }
 
-
-
-      .content_box{
-        
+      .config_option-controller{
+        display:flex;
+        flex-direction:column;
+        align-items: flex-end;
+        text-align: center;
       }
+
+      .config_option{
+        display: block;
+        padding: 1rem;
+        width: 20%;
+        border: solid 1px white;
+        background-image: linear-gradient(black, gray, black);
+      }
+
+      .headlight_link-text{
+        align-self: left;
+      }
+
+      .config_option a{
+        text-decoration: none;
+        color: white;
+        text-align: center;
+        font-size: medium;
+        /* padding: 1rem; */
+      }
+
+      .config_option a:hover{
+        background-color: darkgrey;
+        border-radius:1rem;
+        transition-duration: 300ms;
+      }
+
+      /* .image_config_controller{
+        display: block;
+        flex-direction: column;
+        align-self: flex-end;
+        justify-self: flex-start;
+      } */
+
+      /* .config_controller{
+        display: block;
+        flex-direction: row;
+      } */
+
       .mySlides {
         display: none;
       }
+
+      .next_prev-controller{
+        display:flex;
+        justify-items:space-between;
+        align-items: flex-start;
+      }
+
+      .next_prev-controller a{
+        border-radius: 2rem;
+        text-decoration: none;
+        font-size: large;
+        width: 10%;
+        padding:2rem;
+        border: 1px solid white;
+        background: black;
+        color:white
+      }
+
+      .next_prev-controller a:hover{
+        background: lightgrey;
+        color: black;
+        transition-duration: 500ms;
+      }
+
+
 
       .prev, .next {
         z-index: 100;
