--- a/shopping_cart.css
+++ b/shopping_cart.css
@@ -11,7 +11,7 @@
     font-family: 'Roboto', sans-serif;
   }
 
-  .shopping-cart {
+  .shopping-Shopping Cart {
     width: 750px;
     height: 423px;
     margin: 80px auto;
@@ -146,7 +146,7 @@
   }
 
   @media (max-width: 800px) {
-    .shopping-cart {
+    .shopping-Shopping Cart {
       width: 100%;
       height: auto;
       overflow: hidden;
