--- a/flex.css
+++ b/flex.css
@@ -30,11 +30,54 @@ header marquee img{
     /* HERO IMAGE */
 
     .hero_image_config-page{
-      display:block;
+      display: block;
       justify-content: center;
-      width: 60%;
+      width: 100%;
     }
-   
+    
+      .config_text-container{
+        display: block;
+      }
+
+      .config_text-container p{
+        display: flex;
+        justify-self: center;
+        text-align: left;
+        font-size: x-large;
+        color: white;
+      }
+
+      .config_text-container h1{
+        justify-self: center;
+        text-align: left;
+        font-size: xx-large;
+        color: white;
+      }
+
+      .config_text-container h2{
+        justify-self: center;
+        text-align: left;
+        font-size: xx-large;
+        color: white;
+      }
+
+      .interior-exterior_selection{
+        display: flex;
+        align-self: center;
+        justify-self: center;
+        text-align: left;
+        font-size: large;
+        color: white;
+      }
+    
+
+      .image-button{
+        width:62%;
+      }
+
+      .image-button-2{
+        width:60%;
+      }
       
       nav {
         display: flex;
@@ -56,6 +99,10 @@ header marquee img{
         list-style: none;
         margin: 0;
         padding-left: 0;
+      }
+
+      .text-container-apply-confirm{
+        display: flex;
       }
 
 :root{
