--- a/flex.css
+++ b/flex.css
@@ -32,6 +32,42 @@ header marquee img{
       max-height: 50vh;
     }
 
+    /* .center-models-text{
+      background-color: darkgrey;
+      justify-self: center;
+    } */
+
+    
+    .models_text-box{
+      display: block;
+      font-size: x-large;
+      background: rgb(88, 88, 88);
+      border-top: solid 1px white;
+      border-bottom: solid 1px white;
+      padding: 3rem;
+      width: 100%;
+    }
+
+    .models_text-box-h1{
+      display: flex;
+      justify-content: center;
+    }
+
+    .models_text-box-p{
+      display: flex;
+      justify-content: center;
+    }
+ 
+  
+    .center-h1{
+      justify-self: center;
+    }
+    .center-h1-v2{
+      margin-top: 7rem;
+      justify-self: center; 
+      font-size: xx-large;
+    }
+
     
     /* HERO IMAGE */
       .hero_image{
@@ -138,6 +174,18 @@ header marquee img{
         transition-duration: 200ms;
       }
 
+      .models_text-box a{
+        display: flex;
+        justify-content: center;
+        color: white;
+        font-size: x-large;
+      }
+      .models_text-box a:hover{
+        border-radius: 0.2rem;
+        color: black;
+        transition-duration: 20 0ms;
+      }
+
       #config-options_confirm-option{
         padding: 0.8rem;
       }
@@ -185,6 +233,7 @@ header marquee img{
 }
 /* HERO IMAGE */
 
+  
 header {
   position: sticky;
   top: 0px;
@@ -407,6 +456,15 @@ footer {
       }
       .config_image img{
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .hero_new{
+        display: flex;
+        justify-content: center;
+      }
+      .hero-new img{
         height: 100%;
         object-fit: cover;
       }
