--- a/flex.css
+++ b/flex.css
@@ -136,7 +136,7 @@ header marquee img{
         background-color: black;
         width: 100%;
         height: 10%;
-        position:fixed;
+        /* position:fixed; */
         top: 0;
         z-index: 100;
         text-align: center;        
@@ -379,17 +379,21 @@ ul li ul:focus {
 
 ul li ul li {
   font-size: 1.25rem;
-  display:flex;
-  justify-content: center;
-  justify-self: center;
+  /* display:flex; */
+  /* justify-content: center; */
+  /* justify-self: center; */
   background-color: white;
   padding:0.25rem;
   border-color: black;
   border-style: solid;
   border-radius: 0.5rem;
   border-width: 1px;
-  /* clear: both; */
-  /* width: fit-content; */
+}
+
+ul li ul li a {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 footer {
