--- a/flex.css
+++ b/flex.css
@@ -361,6 +361,11 @@ ul li ul {
   align-items: center;
 } */
 
+
+
+
+
+
 ul li:hover > ul,
 ul li:focus-within > ul,
 ul li ul:hover,
@@ -368,10 +373,7 @@ ul li ul:focus {
   /* width: 500px; */
   visibility: visible;
   opacity: 1;
-  display: flex;
-  width: 500px;
-  animation-name: fadeUp;
-  animation-duration: 1s;
+  display: block
 }
 
 @keyframes fadeUp {
@@ -380,10 +382,11 @@ ul li ul:focus {
   }
   to {
     opacity: 1;
-  }
+  } 
 }
 
 ul li ul li {
+  clear: both;
   font-size: 1.25rem;
   /* display:flex; */
   /* justify-content: center; */
@@ -1170,18 +1173,82 @@ p, h1, h2, h3, h4 {
 }
 
 
+
+.hubcap-image{
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ```````````````````MEDIA Q'S `````````````````````*/
+/* -------------------------------------------------- */
+
+
+
 /* 2xl */
 @media (max-width: 1536px) {
-  
+  .config_options a {
+    padding: 1.8rem;
+    } 
+    .config_options-special a {
+      padding: 4vw;
+    }
+    .config_options-special2 a {
+      padding: 7vw;
+    }
 }
 
 /* xl */
 @media (max-width: 1280px) {
-
+  .config_options a {
+    padding: 1.35rem;
+    font-size:12px;
+    } 
+ 
+  .hubcap-image{
+    width: 100%;
+    height: 30rem;
+  }
+  .config_options-special a {
+    padding: 5vw;
+  }
+  .config_options-special2 a {
+    padding: 5vw;
+  }
 }
+
+/* @media (max-width: 1104px)
+  .config_options a {
+    padding: 1.45rem;
+    font-size: small;
+}
+} */
+
+/* 
+@media (max-width: 1038px) {
+  .config_options a {
+    padding: 1.1rem;
+    font-size: medium;
+}
+} */
+
+
 
 /* lg */
 @media (max-width: 1024px) {
+  .hubcap-image{
+    width: 70%;
+  }
   ul li ul li {
     padding:0.18rem;
   }
@@ -1192,7 +1259,28 @@ p, h1, h2, h3, h4 {
   .nemesis_title-box{
     padding: 10rem;
   }
+  .hubcap-image{
+    width: 80%;
+    height: 60vw;
+  }
+  .config_options-special a {
+    padding: 7vw;
+  }
+
+  .config_options-special2 a {
+    padding: 5vw;
+  }
 }
+
+
+
+/* @media (max-width: 541px){
+  .config_image img {
+  height: 38rem;
+  width: 100%;  
+  } 
+} */
+
 
 
 /* md */
@@ -1212,6 +1300,28 @@ p, h1, h2, h3, h4 {
   .nemesis_title-box{
     padding: 8rem;
   }
+
+  .config_options a {
+  padding: 0.94rem;
+  font-size:12px;
+  } 
+  
+
+  
+  .config_image img {
+    height: 60vw;
+    width: 100%;
+    
+    }
+    .hubcap-image{
+      width: 90%;
+      height: 68vw;
+    }
+
+    .config_options-special2 a {
+      padding: 5vw;
+    }
+   
 }
 
 /* sm */
@@ -1248,8 +1358,49 @@ p, h1, h2, h3, h4 {
   .nemesis_title-box{
     padding: 6rem;
   }
+
+.footer_extra p{
+  font-size: medium;
+}
+.config_options a {
+padding: 0.85rem;
+font-size:12px;
+} 
+
+footer{
+margin-top: auto;
+min-height: 11rem;
+}
+
+.config_image img {
+height: 24rem;
+width: 100%;
+
+} 
+
+.hubcap-image{
+  width: 80%;
+  height: 64vw;
+}
+
+.config_options-special a {
+  padding: 5vw;
+  font-size: small;
+}
+
+.config_options-special2 a {
+  padding: 4.3vw;
+  font-size: small;
+}
   
 }
+
+/* @media (max-width: 511px){
+  .config_options a {
+    padding: 0.45rem;
+    font-size: xx-small;
+}
+} */
 
 /* xs */
 @media (max-width: 475px) {
@@ -1280,8 +1431,101 @@ p, h1, h2, h3, h4 {
     font-size: 1rem;
     padding: 0.7rem;
 }
+
+
+.footer_extra p{
+  font-size: small;
+}
+.config_options a {
+padding: 0.8rem;
+font-size:10px;
 } 
 
+footer{
+margin-top: auto;
+min-height: 11rem;
+}
+
+.config_image img {
+height: 24rem;
+width: 100%;
+
+} 
+
+.hubcap-image{
+  width: 70%;
+  height: 20rem;
+}
+
+.config_options-special a {
+  padding: 3vw;
+  font-size: xx-small;
+}
+
+.config_options-special2 a {
+  padding: 4.3vw;
+  font-size: small;
+}
+}
+
+/* xxs */
+@media (max-width: 300px) {
+  .content_box {
+    padding: 2vw;
+    font-size: x-small;
+  }
+  .footer_buttons a{
+    font-size: xx-small;
+  }
+
+  .footer_content {
+    font-size: xx-small;
+  }
+
+  .footer-title {
+    font-size: 28px;
+  }
+
+  .account-detail p {
+    font-size: 8px;
+  }
+
+  .footer_extra p{
+    font-size: small;
+  }
+
+
+
+  .nemesis_title-box{
+    padding: 2rem;
+  }
+
+
+.config_options a {
+  padding: 0.8rem;
+  font-size: 7px;
+} 
+
+footer{
+  margin-top: auto;
+  min-height: 11rem;
+}
+
+.config_image img {
+  height: 22.5rem;
+  width: 100%;
+}
+
+.hubcap-image{
+  width: 90%;
+}
+
+.config_options-special a {
+  padding: 3vw;
+  font-size: medium;
+}
+
+}
 
 
 
