--- a/flex.css
+++ b/flex.css
@@ -157,6 +157,16 @@ header marquee img{
         padding-left: 0;
       }
 
+
+
+
+      
+
+
+
+
+
+
       .text-container-apply-confirm{
         display: flex;
         flex-direction: column;
@@ -1210,6 +1220,11 @@ p, h1, h2, h3, h4 {
 
 /* xl */
 @media (max-width: 1280px) {
+
+  nav ul li a:first-child{
+    width: ;
+  }
+
   .config_options a {
     padding: 1.35rem;
     font-size:12px;
@@ -1246,6 +1261,7 @@ p, h1, h2, h3, h4 {
 
 /* lg */
 @media (max-width: 1024px) {
+
   .hubcap-image{
     width: 70%;
   }
