--- a/flex.css
+++ b/flex.css
@@ -1216,6 +1216,9 @@ p, h1, h2, h3, h4 {
     .config_options-special2 a {
       padding: 7vw;
     }
+    .config_options-special3 a {
+      padding: 5vw;
+    }
 }
 
 /* xl */
@@ -1234,6 +1237,9 @@ p, h1, h2, h3, h4 {
     padding: 5vw;
   }
   .config_options-special2 a {
+    padding: 5vw;
+  }
+  .config_options-special3 a {
     padding: 5vw;
   }
 }
@@ -1281,6 +1287,14 @@ p, h1, h2, h3, h4 {
 
   .config_options-special2 a {
     padding: 5vw;
+  }
+  .config_options-special3 a {
+    padding: 5vw;
+  }
+
+
+  .text-container-apply-confirm {
+    padding: 13rem;
   }
 }
 
@@ -1333,7 +1347,17 @@ p, h1, h2, h3, h4 {
     .config_options-special2 a {
       padding: 5vw;
     }
-   
+    .config_options-special3 a {
+      padding: 5vw;
+    }
+
+    .text-container-apply-confirm h1{
+      font-size: xx-large;
+    }
+  
+    .text-container-apply-confirm {
+      padding: 10rem;
+    }
 }
 
 /* sm */
@@ -1392,7 +1416,6 @@ width: 100%;
 
 .hubcap-image{
   width: 80%;
-  height: 64vw;
 }
 
 .config_options-special a {
@@ -1404,7 +1427,23 @@ width: 100%;
   padding: 4.3vw;
   font-size: small;
 }
-  
+ 
+.config_options-special3 a {
+  padding: 5.15vw;
+  font-size: x-small;
+}
+
+.text-container-apply-confirm h1{
+  font-size: x-large;
+}
+
+.text-container-apply-confirm a {
+    font-size: large;
+}
+
+.text-container-apply-confirm {
+  padding: 9rem;
+}
 }
 
 /* @media (max-width: 511px){
@@ -1422,7 +1461,7 @@ width: 100%;
     font-size: small;
   }
   .footer_buttons a{
-    font-size: medium;
+    font-size: small;
   }
 
   .footer_content {
@@ -1433,7 +1472,9 @@ width: 100%;
     font-size: 12px;
   }
 
-
+  .footer-title {
+    font-size: xx-large;
+  }
 
   .nemesis_title-box{
     padding: 4rem;
@@ -1456,6 +1497,7 @@ font-size:10px;
 footer{
 margin-top: auto;
 min-height: 11rem;
+align-items: center;
 }
 
 .config_image img {
@@ -1465,8 +1507,7 @@ width: 100%;
 } 
 
 .hubcap-image{
-  width: 70%;
-  height: 20rem;
+  width: 80%;
 }
 
 .config_options-special a {
@@ -1478,10 +1519,38 @@ width: 100%;
   padding: 4.3vw;
   font-size: small;
 }
+
+.config_options-special3 a {
+  padding: 3.6vw;
+  font-size: x-small;
+}
+
+.text-container-apply-confirm h1{
+  font-size: large;
+}
+
+.text-container-apply-confirm a {
+    font-size: small;
+}
+
+.text-container-apply-confirm {
+  padding: 9rem;
+}
+}
+
+/* med xs */
+@media (max-width: 425px) {
+  .text-container-apply-confirm h1{
+    font-size: small;
+  }
+  
+  .text-container-apply-confirm a {
+    font-size: x-small;
+  }
 }
 
 /* xxs */
-@media (max-width: 300px) {
+@media (max-width: 300px) { 
   .content_box {
     padding: 2vw;
     font-size: x-small;
@@ -1529,12 +1598,33 @@ footer{
 }
 
 .hubcap-image{
-  width: 90%;
+  width: 80%;
 }
 
 .config_options-special a {
   padding: 3vw;
   font-size: medium;
+}
+
+.config_options-special3 a {
+  padding: 1vw;
+  font-size: xx-small;
+}
+
+.text-container-apply-confirm h1{
+  font-size: small;
+}
+
+.text-container-apply-confirm a {
+  font-size: x-small;
+}
+
+.text-container-apply-confirm {
+padding: 5rem;
+}
+
+nav{
+  height: 52%;
 }
 
 }
