--- a/flex.css
+++ b/flex.css
@@ -167,6 +167,7 @@ header marquee img{
 
 
 
+      
       .text-container-apply-confirm{
         display: flex;
         flex-direction: column;
@@ -189,6 +190,46 @@ header marquee img{
         color: black;
         transition-duration: 200ms;
       }
+
+
+
+
+
+
+
+      .text-container-config-history{
+        display: flex;
+        flex-direction: column;
+        padding: 20rem;
+      }
+      .text-container-config-history h1{
+        align-self: center;
+        font-size: xx-large;
+        color: white;
+      }
+      .text-container-config-history a{
+        align-self: center;
+        text-decoration: none;
+        color: white;
+        font-size: x-large;
+      }
+      .text-container-config-history a:hover{
+        background-color: darkgrey;
+        border-radius: 0.2rem;
+        color: black;
+        transition-duration: 200ms;
+      }
+
+
+
+
+
+
+
+
+
+
+
 
       .models_text-box a{
         display: flex;
@@ -1242,6 +1283,23 @@ p, h1, h2, h3, h4 {
   .config_options-special3 a {
     padding: 5vw;
   }
+
+  .text-container-config-history{
+    padding: 8rem;
+  }
+
+  .text-container-config-history h1{
+    padding: 5rem;
+    font-size: xx-large;
+  }
+
+  .text-container-config-history a{
+    padding: 3rem;
+    font-size: x-large;
+  }
+  nav{
+    height: 50%;
+  }
 }
 
 /* @media (max-width: 1104px)
@@ -1295,6 +1353,20 @@ p, h1, h2, h3, h4 {
 
   .text-container-apply-confirm {
     padding: 13rem;
+  }
+
+  .text-container-config-history{
+    padding: 8rem;
+  }
+
+  .text-container-config-history h1{
+    padding: 5rem;
+    font-size: x-large;
+  }
+
+  .text-container-config-history a{
+    padding: 1rem;
+    font-size: x-large;
   }
 
   nav{
@@ -1369,6 +1441,21 @@ p, h1, h2, h3, h4 {
       
       nav{
         height: 25%;
+      }
+
+
+      .text-container-config-history{
+        padding: 1rem;
+      }
+    
+      .text-container-config-history h1{
+        padding: 7rem;
+        font-size: x-large;
+      }
+    
+      .text-container-config-history a{
+        padding: 4rem;
+        font-size: large;
       }
 }
 
@@ -1472,6 +1559,20 @@ width: 100%;
     nav{
       height: 18%;
     }
+
+    .text-container-config-history{
+      padding: 1rem;
+    }
+  
+    .text-container-config-history h1{
+      padding: 4rem;
+      font-size: x-large;
+    }
+  
+    .text-container-config-history a{
+      padding: 6rem;
+      font-size: xx-large;
+    }
 }
 
 /* @media (max-width: 511px){
@@ -1568,6 +1669,20 @@ width: 100%;
   padding: 5rem;
   margin-bottom: 13rem;
   }
+
+  .text-container-config-history{
+    padding: 1rem;
+  }
+
+  .text-container-config-history h1{
+    padding: 4rem;
+    font-size: medium;
+  }
+
+  .text-container-config-history a{
+    padding: 6rem;
+    font-size: x-large;
+  }
   
   nav{
     height: 18%;
@@ -1582,6 +1697,20 @@ width: 100%;
   
   .text-container-apply-confirm a {
     font-size: medium;
+  }
+
+  .text-container-config-history{
+    padding: 1rem;
+  }
+
+  .text-container-config-history h1{
+    padding: 2rem;
+    font-size: medium;
+  }
+
+  .text-container-config-history a{
+    padding: 6rem;
+    font-size: x-large;
   }
 }
 
@@ -1671,6 +1800,17 @@ nav{
   
   .merch-item > .merch-image {
     width: 40%;
+  }
+
+  .text-container-config-history h1{
+    padding: 1rem;
+    font-size: large;
+    margin-bottom: 10rem;
+  }
+
+  .text-container-config-history a{
+    padding: 4rem;
+    font-size: large;
   }
 
   
