--- a/flex.css
+++ b/flex.css
@@ -328,7 +328,7 @@ nav {
   background-color: black;
   width: 100%;
   height: 95%;
-  text-align: center;        
+  text-align: left;        
 }
 
 ul {
@@ -451,6 +451,7 @@ ul li ul li {
 }
 
 ul li ul li a {
+  text-decoration: none;
   width: 100%;
   height: 100%;
   display: block;
@@ -462,7 +463,7 @@ footer {
   /* justify-self: center; */
   justify-content: space-around;
   align-content: space-around;
-  text-align: center;
+  text-align: left;
   border-bottom: 0.3rem solid grey;
   color:#fff;        
   width:100%;
@@ -1229,6 +1230,10 @@ p, h1, h2, h3, h4 {
   width: 100%;
 }
 
+.interior-image{
+  width: 1700px;
+}
+
 
 
 
@@ -1246,6 +1251,12 @@ p, h1, h2, h3, h4 {
 
 
 
+/* MEGA xxl */
+@media (max-width: 1600px){
+  .config_options_widow a{
+    padding: 3.5vw;
+  }
+}
 /* 2xl */
 @media (max-width: 1536px) {
   .config_options a {
@@ -1259,6 +1270,14 @@ p, h1, h2, h3, h4 {
     }
     .config_options-special3 a {
       padding: 5vw;
+    }
+
+    /* .config_options_widow{
+      padding: 5vw;
+    } */
+
+    .config_options_widow a{
+      padding: 3.4vw;
     }
 }
 
@@ -1283,6 +1302,15 @@ p, h1, h2, h3, h4 {
   .config_options-special3 a {
     padding: 5vw;
   }
+
+
+  /* .config_options_widow{
+      padding: 5vw;
+    } */
+
+    .config_options_widow a{
+      padding: 3vw;
+    }
 
   .text-container-config-history{
     padding: 8rem;
